refacto: refactory of the whole api
